# reviews

./: Makefile  README.md  pyproject.toml
db/: schema.sql
src/: hello.py
src/reviews/: api.py  hello.py  model.py
